--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.45.2",
     "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
+    "tailwind-scrollbar": "^3.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
