--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-intersection-observer": "^9.5.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "tailwind-scrollbar": "^3.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -49,6 +51,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "prettier": "^3.0.1",
