--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://anhtrvn.github.io/react-webfolio/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -18,16 +19,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
-    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.8.9",
     "tailwind-scrollbar": "^3.0.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -54,6 +55,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.24",
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.1",
