--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://anhtrvn.github.io/PersonalPortfolio/",
-  "name": "my-app",
+  "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.34",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
@@ -51,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.12.12",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
