--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anhtrvn.github.io/PersonalPortfolio/",
+  "homepage": "https://anhtrvn.github.io/personal-portfolio/",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,15 +13,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "react-scroll": "^1.9.0",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +49,8 @@
   "devDependencies": {
     "@types/eslint": "^8.56.10",
     "@types/node": "^20.12.12",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.7",
     "autoprefixer": "^10.4.14",
@@ -61,6 +59,7 @@
     "prettier": "^3.0.1",
     "prettier-plugin-tailwindcss": "^0.5.1",
     "tailwind-scrollbar": "^3.0.5",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.4.5"
   }
 }
