--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://anhtrvn.github.io/PersonalPortfolio/",
+  "homepage": "https://anhtrvn.github.io/personal-portfolio/",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
