--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,8 +55,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "gh-pages": "^6.1.1",
-    "postcss": "^8.4.41",
+    "postcss": "^8.4.49",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.10"
+    "tailwindcss": "^3.4.16"
   }
 }
